去除无用jvm笔记